--- a/basic/python.ipynb
+++ b/basic/python.ipynb
@@ -1143,6 +1143,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myFun(*argv):\n",
+    "    for arg in argv:\n",
+    "        print(arg)\n",
+    " \n",
+    " \n",
+    "# myFun('Hello', 'Welcome', 'to', 'python')\n",
+    "myFun(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First argument : Hello\n",
+      "Next argument through *argv : Welcome\n",
+      "Next argument through *argv : to\n",
+      "Next argument through *argv : python\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myFun(arg1, *argv):\n",
+    "    print(\"First argument :\", arg1)\n",
+    "    for arg in argv:\n",
+    "        print(\"Next argument through *argv :\", arg)\n",
+    " \n",
+    " \n",
+    "myFun('Hello', 'Welcome', 'to', 'python')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1390,6 +1439,469 @@
     "new_list = list(map(lambda x: x * 2 , my_list))\n",
     "\n",
     "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Conditions and If statements\n",
+    "Python supports the usual logical conditions from mathematics:\n",
+    "\n",
+    "Equals: a == b\n",
+    "Not Equals: a != b\n",
+    "Less than: a < b\n",
+    "Less than or equal to: a <= b\n",
+    "Greater than: a > b\n",
+    "Greater than or equal to: a >= b\n",
+    "These conditions can be used in several ways, most commonly in \"if statements\" and loops.\n",
+    "\n",
+    "An \"if statement\" is written by using the if keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 is a positive number.\n",
+      "This is always printed.\n",
+      "This is also always printed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If the number is positive, we print an appropriate message\n",
+    "\n",
+    "num = 3\n",
+    "if num > 0:\n",
+    "    print(num, \"is a positive number.\")\n",
+    "print(\"This is always printed.\")\n",
+    "\n",
+    "num = -1\n",
+    "if num > 0:\n",
+    "    print(num, \"is a positive number.\")\n",
+    "print(\"This is also always printed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b is greater than a\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 33\n",
+    "b = 200\n",
+    "if b > a:\n",
+    "    print(\"b is greater than a\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Python_if_statement.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Indentation\n",
+    "Python relies on indentation (whitespace at the beginning of a line) to define scope in the code. Other programming languages often use curly-brackets for this purpose."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 33\n",
+    "b = 200\n",
+    "if b > a:\n",
+    "print(\"b is greater than a\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Elif\n",
+    "The elif keyword is pythons way of saying \"if the previous conditions were not true, then try this condition\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and b are equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 33\n",
+    "b = 33\n",
+    "if b > a:\n",
+    "    print(\"b is greater than a\")\n",
+    "elif a == b:\n",
+    "    print(\"a and b are equal\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Python_if_elif_else_statement.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Else\n",
+    "The else keyword catches anything which isn't caught by the preceding conditions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is greater than b\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 200\n",
+    "b = 33\n",
+    "if b > a:\n",
+    "    print(\"b is greater than a\")\n",
+    "elif a == b:\n",
+    "    print(\"a and b are equal\")\n",
+    "else:\n",
+    "    print(\"a is greater than b\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Python_if_else_statement.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive or Zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program checks if the number is positive or negative\n",
+    "# And displays an appropriate message\n",
+    "\n",
+    "num = 3\n",
+    "\n",
+    "# Try these two variations as well. \n",
+    "# num = -5\n",
+    "# num = 0\n",
+    "\n",
+    "if num >= 0:\n",
+    "    print(\"Positive or Zero\")\n",
+    "else:\n",
+    "    print(\"Negative number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive number\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''In this program, \n",
+    "we check if the number is positive or\n",
+    "negative or zero and \n",
+    "display an appropriate message'''\n",
+    "\n",
+    "num = 3.4\n",
+    "\n",
+    "# Try these two variations as well:\n",
+    "# num = 0\n",
+    "# num = -4.5\n",
+    "\n",
+    "if num > 0:\n",
+    "    print(\"Positive number\")\n",
+    "elif num == 0:\n",
+    "    print(\"Zero\")\n",
+    "else:\n",
+    "    print(\"Negative number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Python Nested if statements\n",
+    "We can have a if...elif...else statement inside another if...elif...else statement. This is called nesting in computer programming.\n",
+    "\n",
+    "Any number of these statements can be nested inside one another. Indentation is the only way to figure out the level of nesting. They can get confusing, so they must be avoided unless necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive number\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''In this program, we input a number\n",
+    "check if the number is positive or\n",
+    "negative or zero and display\n",
+    "an appropriate message\n",
+    "This time we use nested if statement'''\n",
+    "\n",
+    "num = 2\n",
+    "if num >= 0:\n",
+    "    if num == 0:\n",
+    "        print(\"Zero\")\n",
+    "    else:\n",
+    "        print(\"Positive number\")\n",
+    "else:\n",
+    "    print(\"Negative number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Short Hand If\n",
+    "If you have only one statement to execute, you can put it on the same line as the if statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is greater than b\n"
+     ]
+    }
+   ],
+   "source": [
+    "if a > b: print(\"a is greater than b\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Short Hand If ... Else\n",
+    "If you have only one statement to execute, one for if, and one for else, you can put it all on the same line:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 330\n",
+    "print(\"A\") if a > b else print(\"B\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This technique is known as Ternary Operators, or Conditional Expressions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 330\n",
+    "b = 330\n",
+    "print(\"A\") if a > b else print(\"=\") if a == b else print(\"B\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# And\n",
+    "The and keyword is a logical operator, and is used to combine conditional statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Both conditions are True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 200\n",
+    "b = 33\n",
+    "c = 500\n",
+    "if a > b and c > a:\n",
+    "    print(\"Both conditions are True\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Or\n",
+    "The or keyword is a logical operator, and is used to combine conditional statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At least one of the conditions is True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 200\n",
+    "b = 33\n",
+    "c = 500\n",
+    "if a > b or a > c:\n",
+    "    print(\"At least one of the conditions is True\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nested If\n",
+    "You can have if statements inside if statements, this is called nested if statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Above ten,\n",
+      "and also above 20!\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 41\n",
+    "\n",
+    "if x > 10:\n",
+    "    print(\"Above ten,\")\n",
+    "    if x > 20:\n",
+    "        print(\"and also above 20!\")\n",
+    "    else:\n",
+    "        print(\"but not above 20.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The pass Statement\n",
+    "if statements cannot be empty, but if you for some reason have an if statement with no content, put in the pass statement to avoid getting an error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 33\n",
+    "b = 200\n",
+    "\n",
+    "if b > a:\n",
+    "    pass"
    ]
   },
   {
